Some fixes and translations

--- a/langs/en_US/ribaexporter.lang
+++ b/langs/en_US/ribaexporter.lang
@@ -1,3 +1,9 @@
 # Translation file
 
 ExportRiba = Export Riba
+SIAMissing = SIA code missing
+InvalidInvoice = Invalid invoice
+SQLError = Database error
+RibaExportError = Riba export error
+ZipExportError = Zip export error
+RibaExportSuccess = Riba export completed successfully
